--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
     <link rel="icon" href="tic-tac-toe.png" />
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body><div id="cursor-follower"></div>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#4CAF50" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Tic Tac Toe" />
+    <link rel="apple-touch-icon" href="tic-tac-toe.png" />
+    <link rel="apple-touch-startup-image" href="splash-1125x2436.png">
+  </head>
+  <body>
+    <div id="cursor-follower"></div>
     <div class="container">
-        <h1>Tic Tac Toe ( T<sup>3</sup> )</h1><br>
-        <div id="message"></div>
-        <div id="board" class="board"></div>
-        <button id="reset">Reset Game</button>
+      <h1>Tic Tac Toe ( T<sup>3</sup> )</h1>
+      <br />
+      <div id="message"></div>
+      <div id="board" class="board"></div>
+      <button id="reset">Reset Game</button>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
