--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="apple-touch-startup-image" href="splash-1125x2436.png">
   </head>
   <body>
+    <div id="custom-splash">
+        <img src="tic-tac-toe.png" alt="Tic Tac Toe Logo">
+        <h1>Loading...</h1>
+      </div>      
     <div id="cursor-follower"></div>
     <div class="container">
       <h1>Tic Tac Toe ( T<sup>3</sup> )</h1>
