--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Tic Tac Toe" />
     <link rel="apple-touch-icon" href="tic-tac-toe.png" />
-    <link rel="apple-touch-startup-image" href="splash-1125x2436.png">
+    <link rel="apple-touch-startup-image" href="splash-1125x2436.png" />
   </head>
   <body>
     <div id="custom-splash">
-        <img src="tic-tac-toe.png" alt="Tic Tac Toe Logo">
-        <h1>Loading...</h1>
-      </div>      
+      <img src="tic-tac-toe.png" alt="Tic Tac Toe Logo" />
+      <h1>Loading...</h1>
+    </div>
+    <div class="spinner"></div>
+
     <div id="cursor-follower"></div>
     <div class="container">
       <h1>Tic Tac Toe ( T<sup>3</sup> )</h1>
