--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <link rel="icon" href="tic-tac-toe.png" />
+    <link rel="icon" href="tic-tac-toe2.png" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#4CAF50" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Tic Tac Toe" />
-    <link rel="apple-touch-icon" href="tic-tac-toe.png" />
-    <link rel="apple-touch-startup-image" href="splash-1125x2436.png" />
+    <link rel="apple-touch-icon" href="tic-tac-toe2.png" />
+    <link rel="apple-touch-startup-image" href="tic-tac-toe2.png" />
   </head>
   <body>
     <div id="custom-splash">
