--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="custom-splash">
-      <img src="tic-tac-toe.png" alt="Tic Tac Toe Logo" />
+      <img src="tic-tac-toe2.png" alt="Tic Tac Toe Logo" />
     </div>
 
     <div id="cursor-follower"></div>
