--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#4CAF50" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Tic Tac Toe" />
     <link rel="apple-touch-icon" href="tic-tac-toe2.png" />
